<resources>
    <string name="app_name">WeatherForecast</string>
    <string name="weather_forecast">Weather forecast</string>
    <string name="_2020">2020</string>
    <string name="enter_your_city">Enter your city</string>
    <string name="start">Start</string>
    <string name="popular_cities">Popular cities</string>
    <string name="st_petersburg">St. Petersburg</string>
    <string name="your_city">Your city</string>
    <string name="wind_speed">Wind speed</string>
    <string name="pressure">Pressure</string>
    <string name="temperature">Temperature</string>
    <string name="degrees">degrees</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="return_1">Return</string>
    <string name="settings">Settings</string>
    <string name="bold_font">Bold font</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="geolocation">Geolocation</string>
    <string name="wiki_site">wiki</string>
    <string name="wind_speed_temp">Wind speed: 1.0 m/s</string>
    <string name="pressure_temp">Pressure: 750 mm</string>
    <string name="cities">Cities</string>
    <string name="history">History</string>
    <string name="cities_list">Список популярных городов</string>
    <string name="history_weather">История погоды</string>
    <string name="select_city">Select city</string>
    <string name="temp">Температура:</string>
    <string name="pressure_2">Давление:</string>
    <string name="humidity">Влажность:</string>
    <string name="wind_speed2">Скорость ветра:</string>
    <string name="moscow">Moscow</string>
    <string name="saint_petersburg">Saint Petersburg</string>
    <string name="kazan">Kazan</string>
    <string name="sochi">Sochi</string>
    <string name="city">City</string>
    <string name="add_city">Add City</string>
    <string name="change_city">Введите город</string>
    <string name="about">about</string>
    <string name="about_text">Какой-нибудь текст о приложении!</string>
    <string name="cities_menu">Города</string>
    <string name="history_menu">История</string>
    <string name="about_menu">О приложении</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="weather_forecast_header">Weather Forecast</string>
    <string name="geekbrains_header">Geekbrains</string>
    <string name="about_2">О приложении</string>
    <string name="search_history">История поиска</string>
    <string name="network_error">Check your internet connection!</string>
    <string name="clear_history_list">Очистить</string>
    <string name="clear">clear</string>
    <string name="gps">GPS</string>
    <string name="sign_in">Sign In</string>
</resources>
