<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/cities"
        android:textColor="@color/colorAccent"
        android:textSize="35sp" />

    <Button
        android:id="@+id/BtnMoscow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:text="@string/moscow"
        android:textSize="20sp" />

    <Button
        android:id="@+id/BtnStPetersburg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:text="@string/st_petersburg"
        android:textSize="20sp" />

    <Button
        android:id="@+id/BtnSochi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:text="@string/sochi"
        android:textSize="20sp" />

    <Button
        android:id="@+id/BtnKazan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:text="@string/kazan"
        android:textSize="20sp" />

</LinearLayout>